# cpp-vampire

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  Makefile  vcpkg.json
src/: App.cpp  App.hpp  Camera.hpp  Collision.hpp  Enemy.hpp  Player.hpp  Rect.hpp  Transform.hpp  main.cpp
